--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,8 @@
 /* body {
     background-color: rgb(17 24 39);
 } */
+
+body{
+    font-family: "Roboto Serif", "serif";
+    background-color: rgb(17 24 39);
+}
